# rss-to-signal

./: README.md  main.py  pyproject.toml
rss_to_signal/: main.py
tests/: test_main.py
